Ajout d'une page front

--- a/browser-extentions/google-chrome/manifest.json
+++ b/browser-extentions/google-chrome/manifest.json
@@ -3,7 +3,13 @@
   "description": "L'extention Chrome de Funix !",
   "version": "1.0",
   "manifest_version": 3,
+  "permissions": [
+    "storage"
+  ],
 
+  "action": {
+    "default_popup": "popup.html"
+  },
   "background": {
     "service_worker": "backend.js"
   }
