Refacto archi + ajout de la page options

--- a/browser-extentions/google-chrome/manifest.json
+++ b/browser-extentions/google-chrome/manifest.json
@@ -6,10 +6,10 @@
   "permissions": [
     "storage"
   ],
-
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "front/popup/popup.html"
   },
+  "options_page": "front/options/options.html",
   "background": {
     "service_worker": "backend.js"
   }
